# cppimagefilterbase

./: .gitignore  AbstractFilter.cpp  AbstractFilter.h  BlWhFilter.cpp  BlWhFilter.h  BlurFilter.cpp  BlurFilter.h  CMakeLists.txt  ConvFilter.cpp  ConvFilter.h  EdgeFilter.cpp  EdgeFilter.h  LocalityFilter.cpp  LocalityFilter.h  PointFilter.cpp  PointFilter.h  README.md  RedFilter.cpp  RedFilter.h  TresholdFilter.cpp  TresholdFilter.h  builder.cpp  builder.h  filters.cpp  filters.h  main.cpp  myFilters.h  png_toolkit.cpp  png_toolkit.h
